just a normal checkpoint

--- a/supervised/classification/hacker_earth/landmark_group/store_footfall_prediction/landmark_data_analysis_and_store_footfall_prediction.ipynb
+++ b/supervised/classification/hacker_earth/landmark_group/store_footfall_prediction/landmark_data_analysis_and_store_footfall_prediction.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as panda\n",
-    "import pickle"
+    "import pickle\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,32 +25,271 @@
     "store_master_file = 'data/Store_Master.xlsx'\n",
     "\n",
     "train_data_file = 'data/Test_Set.xlsx'\n",
+    "\n",
+    "customer_demo_data_pkl = 'data/customer_demo_data.pkl'\n",
+    "\n",
+    "customer_transaction_data_pkl = 'data/customer_transaction_data.pkl'\n",
+    "\n",
+    "store_master_data_pkl = 'data/store_master_data.pkl'\n",
+    "\n",
+    "train_data_pkl = 'data/train_data.pkl'\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 16)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "store_master_data = panda.read_excel(store_master_file, sheet_name = 'Store_Master')\n",
+    "if os.path.isfile(customer_demo_data_pkl):\n",
+    "    \n",
+    "    customer_demo_data = panda.read_pickle(customer_demo_data_pkl)\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    customer_demo_data = panda.read_excel(customer_demo_file, sheet_name = 'Demographics')\n",
+    "    \n",
+    "customer_demo_data_shape = customer_demo_data.shape  \n",
     "\n",
-    "store_master_data_shape = store_master_data.shape\n",
+    "customer_demo_data_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(544649, 15)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if os.path.isfile(customer_transaction_data_pkl):\n",
+    "    \n",
+    "    customer_transaction_data = panda.read_pickle(customer_transaction_data_pkl)\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    customer_transaction_data = panda.read_excel(customer_transaction_file, sheet_name = 'Transaction')\n",
+    "    \n",
+    "customer_transaction_data_shape = customer_transaction_data.shape \n",
     "\n",
-    "train_data = panda.read_excel(train_data_file, sheet_name = 'Test_Set')\n",
+    "customer_transaction_data_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35, 15)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if os.path.isfile(store_master_data_pkl):\n",
+    "    \n",
+    "    store_master_data = panda.read_pickle(store_master_data_pkl)\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    store_master_data = panda.read_excel(store_master_file, sheet_name = 'Store_Master')\n",
     "\n",
-    "train_data_shape = train_data.shape\n",
+    "    \n",
+    "store_master_data_shape = store_master_data.shape \n",
+    "store_master_data_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(400000, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if os.path.isfile(train_data_pkl):\n",
+    "    \n",
+    "    train_data = panda.read_pickle(train_data_pkl)\n",
+    "    \n",
+    "else:\n",
+    "    \n",
+    "    train_data = panda.read_excel(train_data_file, sheet_name = 'Test_Set')\n",
+    "\n",
+    "    \n",
+    "train_data_shape = train_data.shape \n",
+    "\n",
+    "train_data_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "customer_demo_data_columns:  ['Customer_ID', 'Territory', 'Nationality', 'Income_Range', 'Job_Type', 'Marital_Status', 'Gender', 'State', 'Language', 'Loyalty_Status', 'Birth_date', 'Age', 'Points', 'First_txn_dt', 'Last_accr_txn_dt', 'Last_rdm_txn_dt']\n",
+      "\n",
+      " customer_transaction_data_columns:  ['Territory', 'Business', 'Year', 'Week', 'Store_Code', 'City_Name', 'Store_Type', 'Transaction_Type', 'Return_Reason', 'Customer_ID', 'Invoices', 'Item_Count', 'Revenue', 'Discount', 'Units_Sold']\n",
+      "\n",
+      " store_master_data_columns:  ['Territory', 'Business', 'Region', 'Region_Code', 'Store_Code', 'Store_Name', 'Mall_Name', 'Store_Format', 'Sales_Per_Day', 'Store_Launch_Date', 'Train_Test_Store', 'Geo_Field', 'Store_Size_Sq_Ft', 'Customer_Count', 'Total_Revenue']\n",
+      "\n",
+      " train_data_columns:  ['Customer_ID', 'Store_Code']\n"
+     ]
+    }
+   ],
+   "source": [
+    "customer_demo_data_columns = customer_demo_data.columns.tolist()\n",
+    "\n",
+    "customer_transaction_data_columns = customer_transaction_data.columns.tolist()\n",
+    "\n",
+    "store_master_data_columns = store_master_data.columns.tolist()\n",
+    "\n",
+    "train_data_columns = train_data.columns.tolist()\n",
     "\n",
     "\n",
-    "customer_transaction_data = panda.read_excel(customer_transaction_file, sheet_name = 'Transaction')\n",
+    "print(\"customer_demo_data_columns: \", customer_demo_data_columns)\n",
+    "print(\"\\n customer_transaction_data_columns: \", customer_transaction_data_columns)\n",
+    "print(\"\\n store_master_data_columns: \", store_master_data_columns)\n",
+    "print(\"\\n train_data_columns: \", train_data_columns)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nationality value counts : INDIA                             21128\n",
+      "UNITED ARAB EMIRATES              15123\n",
+      "PHILIPPINES                       14495\n",
+      "EGYPT                              6700\n",
+      "Unspecified                        6490\n",
+      "PAKISTAN                           5671\n",
+      "UNDEFINED                          4505\n",
+      "JORDAN                             3631\n",
+      "SYRIAN ARAB REPUBLIC               3324\n",
+      "SUDAN                              1699\n",
+      "OCCUPIED PALESTINIAN TERRITORY     1372\n",
+      "MOROCCO                            1134\n",
+      "SRI LANKA                          1070\n",
+      "OMAN                                897\n",
+      "BANGLADESH                          850\n",
+      "NEPAL                               838\n",
+      "LEBANON                             783\n",
+      "IRAQ                                680\n",
+      "ISLAMIC REPUBLIC OF IRAN            668\n",
+      "ETHIOPIA                            601\n",
+      "YEMEN                               472\n",
+      "UNITED KINGDOM                      456\n",
+      "UNDISCLOSED ARAB NATIONAL           443\n",
+      "TUNISIA                             414\n",
+      "PALESTINE                           324\n",
+      "CANADA                              302\n",
+      "ALGERIA                             298\n",
+      "UNITED STATES                       288\n",
+      "KENYA                               274\n",
+      "SOUTH AFRICA                        273\n",
+      "                                  ...  \n",
+      "LATVIA                                2\n",
+      "FRENCH POLYNESIA                      2\n",
+      "COTE DIVOIRE                          2\n",
+      "PAPUA NEW GUINEA                      2\n",
+      "BOLIVIA                               1\n",
+      "MADAGASCAR                            1\n",
+      "WESTERN SAHARA                        1\n",
+      "HOLY SEE (VATICAN CITY STATE)         1\n",
+      "COCOS (KEELING) ISLANDS               1\n",
+      "VANUATU                               1\n",
+      "VIRGIN ISLANDS U.S.                   1\n",
+      "SLOVENIA                              1\n",
+      "CHRISTMAS ISLAND                      1\n",
+      "TOGO                                  1\n",
+      "NETHERLANDS ANTILLES                  1\n",
+      "ANTIGUA & BARBUDA                     1\n",
+      "SAN MARINO                            1\n",
+      "HEARD & MCDONALD ISLANDS              1\n",
+      "BERMUDA                               1\n",
+      "SURINAME                              1\n",
+      "SVALBARD & JAN MAYEN                  1\n",
+      "PUERTO RICO                           1\n",
+      "WALLIS & FUTUNA                       1\n",
+      "BRUNEI DARUSSALAM                     1\n",
+      "COSTA RICA                            1\n",
+      "SAO TOME & PRINCIPE                   1\n",
+      "TIMOR-LESTE                           1\n",
+      "MARSHALL ISLANDS                      1\n",
+      "BOTSWANA                              1\n",
+      "LAOS                                  1\n",
+      "Name: Nationality, Length: 223, dtype: int64\n",
+      "language  value counts : English        80499\n",
+      "Arabic         18476\n",
+      "Unspecified     1025\n",
+      "Name: Language, dtype: int64\n",
+      "territory value counts : United Arab Emirates    100000\n",
+      "Name: Territory, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "##lets analyze the customer demographics data.\n",
     "\n",
-    "customer_transaction_data_shape = customer_transaction_data.shape\n",
+    "##check the nationality/language distribution. if we see that nationality and language are the same, \n",
+    "## we can simply ignore these fields\n",
     "\n",
+    "print('nationality value counts :', customer_demo_data['Nationality'].value_counts())\n",
     "\n",
-    "customer_demo_data = panda.read_excel(customer_demo_file, sheet_name = 'Demographics')\n",
+    "print('language  value counts :', customer_demo_data['Language'].value_counts())\n",
     "\n",
-    "customer_demo_data_shape = customer_demo_data.shape\n",
+    "print('territory value counts :', customer_demo_data['Territory'].value_counts())\n",
+    "\n",
+    "## we can see there are 1025 rows where customers have not disclosed language spoken.\n",
+    "## lets try and see if Territory has been specified\n",
+    "\n",
+    "## there is only one territory - UAE. The most common language spoken there is English - count of 80499.\n",
+    "\n",
     "\n"
    ]
   },
@@ -57,45 +297,82 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['JORDAN', 'Unspecified'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "customer_demo_data.to_pickle('data/customer_demo_data.pkl')\n",
+    "\n",
+    "## First assumption: can we fill the empty language data with English blindly.\n",
+    "\n",
+    "## out of the unspecified language rows does any one have a nationality listed. in that case, we need to check the language\n",
+    "## for that nationality. else fill in english in all.\n",
     "\n",
     "\n",
-    "customer_transaction_data.to_pickle('data/customer_transaction_data.pkl')\n",
+    "language_data = customer_demo_data.loc[customer_demo_data['Language']=='Unspecified']\n",
     "\n",
-    "store_master_data.to_pickle('data/store_master_data.pkl')\n",
+    "values = np.unique(language_data['Nationality'].values)\n",
     "\n",
-    "train_data.to_pickle('data/train_data.pkl')"
+    "values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Size same for customer demo data :  True\n",
-      "Size same for customer transaction data :  True\n",
-      "Size same for store master data :  True\n",
-      "Size same for train data :  True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "English        2418\n",
+       "Arabic         1212\n",
+       "Unspecified       1\n",
+       "Name: Language, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "## check to see if pickling /unpickling gives me the same data.\n",
+    "## we can see that there is one single row where language is not specified and Nationality is given as JORDAN\n",
     "\n",
-    "print('Size same for customer demo data : ' ,customer_demo_data_shape == panda.read_pickle('data/customer_demo_data.pkl').shape)\n",
+    "## lets see if we can find a row where Nationality is JORDAN and language is provided. if there is only one single \n",
+    "## such value then we would be replacing it with that value. If there are more, we would be replacing Unspecified with\n",
+    "## the most occuring language\n",
     "\n",
-    "print('Size same for customer transaction data : ' ,customer_transaction_data_shape == panda.read_pickle('data/customer_transaction_data.pkl').shape)\n",
+    "## the other rows where language is empty will be replaced with ENglish, the most widely spoken language\n",
     "\n",
-    "print('Size same for store master data : ' ,store_master_data_shape == panda.read_pickle('data/store_master_data.pkl').shape)\n",
+    "languages_for_jordan_nationality = customer_demo_data.loc[customer_demo_data['Nationality'] == 'JORDAN']\n",
     "\n",
-    "print('Size same for train data : ' ,train_data_shape == panda.read_pickle('data/train_data.pkl').shape)\n",
-    "\n"
+    "languages_for_jordan_nationality['Language'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For now , we are assuming that language will not have an impact on customer visits to new store since all stores are anyways opened in the existing territory.\n",
+    "\n",
+    "##### we may modify this assumption later on, based on our initial results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_demo_data_to_be_removed_columns = ['Language']"
    ]
   }
  ],
