--- a/images_playground/convolution_intuition.ipynb
+++ b/images_playground/convolution_intuition.ipynb
@@ -225,39 +225,340 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "To reiterate the steps in performing an image convolution\n",
+    "\n",
+    "1. take the pixel representation of the original image\n",
+    "\n",
+    "2. decide on a kernel matrix and flip it horizontally as well as vertically\n",
+    "\n",
+    "3. perform padding on the original matrix.\n",
+    "\n",
+    "4. decide on a slide\n",
+    "\n",
+    "5. calculate the output image matrix based on the dimensions in 1,2,3 and 4.\n",
+    "\n",
+    "6. slide the kernel on the original image and calculate the weighted sum to get the output image\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "###### We will now take a look at the python code for each of these operations. We would compare our python code with the already available methods in industry accepted packages such as numpy , scipy, etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Flip a matrix horizontally and vertically"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  2,  3],\n",
+       "       [ 1,  1, 11],\n",
+       "       [ 3,  4, 55]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## we will first flip horizontally and then vertically\n",
+    "\n",
+    "m = np.array([\n",
+    "\n",
+    "    [5, 2, 3],\n",
+    "    [1, 1, 11],\n",
+    "    [3, 4, 55]\n",
+    "\n",
+    "])\n",
+    "\n",
+    "m"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 2 3]\n",
+      "[3 2 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  2,  5],\n",
+       "       [11,  1,  1],\n",
+       "       [55,  4,  3]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "## lets take an example of only the first row. and see if we can rotate that particular array horizontally\n",
+    "## once we do that, we will extend this to entire array\n",
+    "a = m[0]\n",
+    "\n",
+    "print(a[:: ]) ## :: give the entire array\n",
+    "\n",
+    "## now to rotate this, we give the negative index to rotate\n",
+    "print(a[::-1])\n",
+    "\n",
+    "## now that this has worked, lets extend this to entire matrix\n",
+    "\n",
+    "m[:,::-1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  2,  5],\n",
+       "       [11,  1,  1],\n",
+       "       [55,  4,  3]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def flip_horizontally(matrix):\n",
+    "    return matrix[:, ::-1]\n",
+    "\n",
+    "##lets test\n",
+    "\n",
+    "flip_horizontally(m)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3  2  5]\n",
+      " [11  1  1]\n",
+      " [55  4  3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## lets assert using industry level method to achieve the same\n",
+    "\n",
+    "print(np.fliplr(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 1 3] [3 1 5]\n",
+      "[[ 5  2  3]\n",
+      " [ 1  1 11]\n",
+      " [ 3  4 55]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  4, 55],\n",
+       "       [ 1,  1, 11],\n",
+       "       [ 5,  2,  3]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "## lets take an example of only the first column. and see if we can rotate that particular array vertically\n",
+    "## once we do that, we will extend this to entire array\n",
+    "a = m[:, 0]\n",
+    "\n",
+    "print(a,a[::-1]) ## :: give the entire array\n",
+    "print(m)\n",
+    "m[ ::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3  4 55]\n",
+      " [ 1  1 11]\n",
+      " [ 5  2  3]]\n",
+      "[[ 3  4 55]\n",
+      " [ 1  1 11]\n",
+      " [ 5  2  3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def flip_vertically(matrix):\n",
+    "    return matrix[::-1]\n",
+    "\n",
+    "## lets test\n",
+    "\n",
+    "print(flip_vertically(m))\n",
+    "\n",
+    "print(np.flipud(m))\n",
+    "\n",
+    "## we can see that they are the same"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[55  4  3]\n",
+      " [11  1  1]\n",
+      " [ 3  2  5]]\n",
+      "[[55  4  3]\n",
+      " [11  1  1]\n",
+      " [ 3  2  5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## lets bring this all together.\n",
+    "print(flip_vertically(flip_horizontally(m)))\n",
+    "\n",
+    "\n",
+    "print(np.flipud(np.fliplr(m)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Lets create a method to apply convolution on a pixel representation of an image\n",
+    "\n",
+    "###### input would be the original image matrix, kernel matrix , stride value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210\n"
+     ]
+    }
+   ],
+   "source": [
+    "## lets first see how we can get weighted sum of two matrix\n",
+    "\n",
+    "a = np.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "k = np.array([[10,10,10],[10,10,10]])\n",
+    "\n",
+    "## we are expecting a value of 1*10+2*10+3*10+4*10+5*10+6*10\n",
+    "sum = 0\n",
+    "for i, j in enumerate(a):\n",
+    "    \n",
+    "    for a, b in zip(j, k[i]):\n",
+    "        sum = sum + a*b\n",
+    "        \n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5 1.  0.5]\n",
+      " [0.1 0.4 0.3]\n",
+      " [0.4 0.7 0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.array([[2,1,2],[5,0,1],[1,7,3]])\n",
+    "w = np.array([[0.5,0.7, 0.4],[0.3,0.4, 0.1],[0.5, 1, 0.5]])\n",
+    "w = flip_vertically(flip_horizontally(w))\n",
+    "print(w)\n",
+    "\n",
+    "dim_image = m.shape\n",
+    "dim_kernel = w.shape\n",
+    "stride = 1\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
