--- a/supervised/classification/hacker_earth/society_generale/complaint_tracker/categorical_field_analysis.ipynb
+++ b/supervised/classification/hacker_earth/society_generale/complaint_tracker/categorical_field_analysis.ipynb
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1965,11 +1965,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr_data[['complaint_reason','complaint_reason_encoded']].to_csv('dataset/train_data_complaint_reason.csv')"
+    "test_data[['complaint_reason','complaint_reason_encoded']].to_csv('dataset/test_data_complaint_reason.csv')"
    ]
   }
  ],
