secnd submission round 2... rank 142

--- a/supervised/classification/hacker_earth/society_generale/complaint_tracker/complaint_tracker_first_go.ipynb
+++ b/supervised/classification/hacker_earth/society_generale/complaint_tracker/complaint_tracker_first_go.ipynb
@@ -44,18 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_data_path ='dataset/test.csv'\n",
     "train_data_path = 'dataset/train.csv'\n",
-    "sample_submission_path = 'dataset/sample_submission.csv'\n"
+    "sample_submission_path = 'dataset/sample_submission.csv'\n",
+    "test_complaint_reason_path = 'dataset/test_data_complaint_reason.csv'\n",
+    "train_complaint_reason_path = 'dataset/train_data_complaint_reason.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,24 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['complaint-id',\n",
-       " 'date-received',\n",
-       " 'transaction-type',\n",
-       " 'complaint-reason',\n",
-       " 'company-response',\n",
-       " 'date-sent-to-company',\n",
-       " 'complaint-status',\n",
-       " 'consumer-disputes',\n",
-       " 'consumer-complaint-summary']"
+       "['complaint_id',\n",
+       " 'date_received',\n",
+       " 'transaction_type',\n",
+       " 'complaint_reason',\n",
+       " 'company_response',\n",
+       " 'date_sent_to_company',\n",
+       " 'complaint_status',\n",
+       " 'consumer_disputes',\n",
+       " 'consumer_complaint_summary']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,23 +129,23 @@
    "source": [
     "# converting all columns to lower case for ease of typing\n",
     "\n",
-    "train_data.columns = [x.lower().strip() for x in train_data.columns.tolist()]\n",
+    "train_data.columns = [x.lower().strip().replace('-','_') for x in train_data.columns.tolist()]\n",
     "\n",
     "train_data.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_column = 'complaint-status'"
+    "target_column = 'complaint_status'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,15 +155,15 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 43266 entries, 0 to 43265\n",
       "Data columns (total 9 columns):\n",
-      "complaint-id                  43266 non-null object\n",
-      "date-received                 43266 non-null object\n",
-      "transaction-type              43266 non-null object\n",
-      "complaint-reason              43266 non-null object\n",
-      "company-response              20760 non-null object\n",
-      "date-sent-to-company          43266 non-null object\n",
-      "complaint-status              43266 non-null object\n",
-      "consumer-disputes             35568 non-null object\n",
-      "consumer-complaint-summary    43266 non-null object\n",
+      "complaint_id                  43266 non-null object\n",
+      "date_received                 43266 non-null object\n",
+      "transaction_type              43266 non-null object\n",
+      "complaint_reason              43266 non-null object\n",
+      "company_response              20760 non-null object\n",
+      "date_sent_to_company          43266 non-null object\n",
+      "complaint_status              43266 non-null object\n",
+      "consumer_disputes             35568 non-null object\n",
+      "consumer_complaint_summary    43266 non-null object\n",
       "dtypes: object(9)\n",
       "memory usage: 3.0+ MB\n"
      ]
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -197,15 +199,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>complaint-id</th>\n",
-       "      <th>date-received</th>\n",
-       "      <th>transaction-type</th>\n",
-       "      <th>complaint-reason</th>\n",
-       "      <th>company-response</th>\n",
-       "      <th>date-sent-to-company</th>\n",
-       "      <th>complaint-status</th>\n",
-       "      <th>consumer-disputes</th>\n",
-       "      <th>consumer-complaint-summary</th>\n",
+       "      <th>complaint_id</th>\n",
+       "      <th>date_received</th>\n",
+       "      <th>transaction_type</th>\n",
+       "      <th>complaint_reason</th>\n",
+       "      <th>company_response</th>\n",
+       "      <th>date_sent_to_company</th>\n",
+       "      <th>complaint_status</th>\n",
+       "      <th>consumer_disputes</th>\n",
+       "      <th>consumer_complaint_summary</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -235,7 +237,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Tr-18515</td>\n",
+       "      <td>Tr-22219</td>\n",
        "      <td>1/19/2017</td>\n",
        "      <td>Debt collection</td>\n",
        "      <td>Incorrect information on credit report</td>\n",
@@ -262,38 +264,38 @@
        "</div>"
       ],
       "text/plain": [
-       "       complaint-id date-received transaction-type  \\\n",
+       "       complaint_id date_received transaction_type  \\\n",
        "count         43266         43266            43266   \n",
        "unique        43266           920               18   \n",
-       "top        Tr-18515     1/19/2017  Debt collection   \n",
+       "top        Tr-22219     1/19/2017  Debt collection   \n",
        "freq              1           226            10422   \n",
        "\n",
-       "                              complaint-reason  \\\n",
+       "                              complaint_reason  \\\n",
        "count                                    43266   \n",
        "unique                                     150   \n",
        "top     Incorrect information on credit report   \n",
        "freq                                      4466   \n",
        "\n",
-       "                                         company-response  \\\n",
+       "                                         company_response  \\\n",
        "count                                               20760   \n",
        "unique                                                 10   \n",
        "top     Company has responded to the consumer and the ...   \n",
        "freq                                                10928   \n",
        "\n",
-       "       date-sent-to-company         complaint-status consumer-disputes  \\\n",
+       "       date_sent_to_company         complaint_status consumer_disputes  \\\n",
        "count                 43266                    43266             35568   \n",
        "unique                  930                        5                 2   \n",
        "top               1/19/2017  Closed with explanation                No   \n",
        "freq                    182                    34300             27663   \n",
        "\n",
-       "                               consumer-complaint-summary  \n",
+       "                               consumer_complaint_summary  \n",
        "count                                               43266  \n",
        "unique                                              43022  \n",
        "top     I am filing this complaint because Experian ha...  \n",
        "freq                                                   13  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,23 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "date-received    0\n",
+       "date_received    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data[['date-received']].isnull().sum()"
+    "train_data[['date_received']].isnull().sum()"
    ]
   },
   {
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,11 +442,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_days_passed' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-4583b2ad6acc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'days_passed_since_complaint_received'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'date_received'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mget_days_passed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mapply\u001b[1;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[0;32m   3190\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3191\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3192\u001b[1;33m                 \u001b[0mmapped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3193\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3194\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas/_libs/src\\inference.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-14-4583b2ad6acc>\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'days_passed_since_complaint_received'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'date_received'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mget_days_passed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_days_passed' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "train_data['days_passed_since_complaint_received'] = train_data['date-received'].apply(lambda x : get_days_passed(x))"
+    "train_data['days_passed_since_complaint_received'] = train_data['date_received'].apply(lambda x : get_days_passed(x))"
    ]
   },
   {
